--- a/Part.1.G.The-Python-Tutorial-local.ipynb
+++ b/Part.1.G.The-Python-Tutorial-local.ipynb
@@ -235,7 +235,7 @@
     "cd ~/Downloads/cpython/Doc/tutorial/ \n",
     "for f in *.rst\n",
     "    do\n",
-    "        rst2ipynb $f -o ${f/%.rst/.ipynb}\n",
+    "        pandoc $f -o \"${f/%.rst/.ipynb}\"\n",
     "    done\n",
     "mkdir ipynbs\n",
     "mv *.ipynb ipynbs/"
@@ -424,10 +424,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.3"
   },
   "toc-autonumbering": true
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
