--- a/Part.2.D.1-args.ipynb
+++ b/Part.2.D.1-args.ipynb
@@ -553,7 +553,18 @@
     "\n",
     "    1. 名称不能以数字开头;\n",
     "    2. 名称中不能有空格;\n",
-    "    3. 名称不能与关键字重合"
+    "    3. 名称不能与关键字重合\n",
+    "Python 的 Keyword List：\n",
+    "\n",
+    "|     -      | Python     | Keyword    | List       |     -      |\n",
+    "| ---------- | ---------- | ---------- | ---------- | ---------- |\n",
+    "| `and`      | `as`       | `assert`   | `async`    | `await`    |\n",
+    "| `break`    | `class`    | `continue` | `def`      | `del`      |\n",
+    "| `elif`     | `else`     | `except`   | `False`    | `finally`  |\n",
+    "| `for`      | `from`     | `global`   | `if`       | `import`   |\n",
+    "| `in`       | `is`       | `lambda`   | `None`     | `nonlocal` |\n",
+    "| `not`      | `or`       | `pass`     | `raise`    | `return`   |\n",
+    "| `True`     | `try`      | `while`    | `with`     | `yield`    |"
    ]
   },
   {
