--- a/Part.2.D.2-aargs.ipynb
+++ b/Part.2.D.2-aargs.ipynb
@@ -527,6 +527,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 总结"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. 在一个位置参数（Positional Arguments）前面标注了星号,\"*\",是 “Arbitrary Positional Arguments”，即 “随意的位置参数”;\n",
+    "    这个位置参数可以接收一系列值，在函数内部可以对这一系列值用 for ... in ... 循环进行逐一的处理。\n",
+    "2. 可以在定义函数的时候，为某些参数设定默认值，这些有默认值的参数，又被称作关键字参数（Keyword Arguments）;\n",
+    "   带两个星号的参数,\"**\",是 “Arbitrary Keyword Arguments”,即 “随意的关键字参数”;\n",
+    "3. 函数被调用时，面对许多参数，Python 需要按照既定的规则（即，顺序）判定每个参数究竟是哪一类型的参数：\n",
+    "   > **Order of Arguments**\n",
+    "   \n",
+    "   > Positional\n",
+    "\n",
+    "   > Arbitrary Positional\n",
+    "\n",
+    "   > Keyword\n",
+    "   \n",
+    "   > Arbitrary Keyword"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a href=\"./Part.2.D.3-lambda.ipynb\" ><small>Next Page</small></a>"
    ]
   }
