--- a/Part.2.D.3-lambda.ipynb
+++ b/Part.2.D.3-lambda.ipynb
@@ -548,8 +548,57 @@
    ],
    "source": [
     "pairs = [(1, 'one'), (2, 'two'), (3, 'three'), (4, 'four')]\n",
-    "pairs.sort(key=lambda p: p[1])\n",
+    "pairs.sort(key=lambda p: p[1]) #key=lambda 元素:元素[字段索引]\n",
     "pairs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "新增示例"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('john', 'A', 15), ('jane', 'B', 12), ('dave', 'B', 10)]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "students = [('john', 'A', 15), ('jane', 'B', 12), ('dave', 'B', 10)]\n",
+    "sorted(students, key=lambda s: s[2], reverse=True) # 按年龄排序,按降序"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 总结"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. > 为函数取化名，变量名可以长一些，提高可读性，尤其在的编辑器都支持自动补全和多光标编辑的功能； \n",
+    "2. > 匿名函数：lambda x, y: x + y。\n",
+    "   \n",
+    "   先写上 lambda 这个关键字，其后分为两个部分，: 之前是参数，之后是表达式；这个表达式的值，就是这个函数的返回值。\n",
+    "3. > lambda使用场景：\n",
+    "   - 作为某函数的返回值；\n",
+    "   - 作为某函数的参数；\n",
+    "4. > 多阅读[The Python Tutorial](https://docs.python.org/3/tutorial/controlflow.html#lambda-expressions)，比如明确排序sort()、sorted()的区别，才能迅速了解文中实例的含义。"
    ]
   },
   {
@@ -576,7 +625,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
