--- a/Part.2.D.5-docstrings.ipynb
+++ b/Part.2.D.5-docstrings.ipynb
@@ -349,6 +349,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 总结"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. 要养成写函数说明文档的习惯;\n",
+    "2. 在函数定义内部，我们可以加上 Docstring；将来函数的 “用户” 就可以通过 help() 这个内建函数，或者 .__doc__ 这个 Method 去查看这个 Docstring，即，该函数的 “产品说明书”;\n",
+    "3.  PEP 257 中必须掌握的规范:\n",
+    "   - 无论是单行还是多行的 Docstring，一概使用三个双引号括起；\n",
+    "   - 在 Docstring 内部，文字开始之前，以及文字结束之后，都不要有空行；\n",
+    "   - 多行 Docstring，第一行是概要，随后空一行，再写其它部分；\n",
+    "   - 完善的 Docstring，应该概括清楚以下内容：参数、返回值、可能触发的错误类型、可能的副作用，以及函数的使用限制等等；\n",
+    "   - 每个参数的说明都使用单独的一行……\n",
+    "4. Sphinx 可以从 .py 文件里提取所有 Docstring，而后生成完整的 Documentation。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a href=\"./Part.2.D.6-modules.ipynb\" ><small>Next Page</small></a>"
    ]
   }
